src/objects/Station_Line__c.object
<CustomObject>
    <fields>
        <fullName>ColorName__c</fullName>
        <label>路線色名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>路線色</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyEXID__c</fullName>
        <label>事業者外部ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kana__c</fullName>
        <label>カナ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineEXID__c</fullName>
        <externalId>true</externalId>
        <label>路線外部ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>経緯度</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>路線名正式名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>事業者</label>
        <referenceTo>Station_Company__c</referenceTo>
        <relationshipLabel>Station Lines</relationshipLabel>
        <relationshipName>Station_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zoom__c</fullName>
        <label>縮尺値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Station Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>路線名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Station Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>